# docs/swagger.json
@@ -164,16 +164,16 @@
                 "nome": {
                     "type": "string"
                 },
-                "nomeProfessor": {
+                "nome_professor": {
                     "type": "string"
                 },
-                "notaPrimeiroSemestre": {
-                    "type": "number"
+                "nota_primeiro_semestre": {
+                    "type": "float"
                 },
-                "notaSegundoSemestre": {
-                    "type": "number"
+                "nota_segundo_semestre": {
+                    "type": "float"
                 },
-                "numeroSala": {
+                "numero_sala": {
                     "type": "integer"
                 }
             }
